--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "project",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "一个人的孤独",
+  "author": "dinglucheng",
   "private": true,
-  "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -15,13 +14,7 @@
     "commit": "./node_modules/cz-customizable/standalone.js",
     "format": "prettier --write \"src/**/*.ts\"",
     "check": "prettier --check \"./src/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -56,7 +49,6 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.0",
     "jest": "^27.2.5",
     "lint-staged": "^12.1.3",
     "prettier": "2.5.1",
@@ -87,10 +79,5 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -e $GIT_PARAMS"
-    }
   }
 }
